[gd_scene load_steps=7 format=2]

[ext_resource path="res://_NonMainGameRelateds/_Master/Menu/Assets/MasterMenu_MainPage_Background.png" type="Texture" id=1]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=2]
[ext_resource path="res://MiscRelated/FontRelated/Fonts/LcdSolid/LcdSolid-VPzB.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://_NonMainGameRelateds/_Master/Menu/Subs/MasterMenu_MainPage/MasterMenu_MainPage.gd" type="Script" id=4]
[ext_resource path="res://_NonMainGameRelateds/_Master/AudioRelated/GUI/AudioSettingsPanel/AudioSettingsPanel.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 34
outline_size = 2
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 3 )

[node name="MasterMenu_MainPage" type="MarginContainer"]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="MainPanel" type="MarginContainer" parent="."]
margin_left = 372.0
margin_top = 177.0
margin_right = 588.0
margin_bottom = 362.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Background" type="TextureRect" parent="MainPanel"]
margin_right = 216.0
margin_bottom = 185.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="MainPanel"]
margin_right = 216.0
margin_bottom = 185.0
mouse_filter = 2

[node name="Label" type="Label" parent="MainPanel/Control"]
margin_left = 6.0
margin_top = 3.0
margin_right = 211.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "Menu"
align = 1
valign = 1

[node name="Button_Resume" parent="MainPanel/Control" instance=ExtResource( 2 )]
margin_left = 6.0
margin_top = 61.0
margin_right = 210.0
margin_bottom = 112.0

[node name="TextureButton" parent="MainPanel/Control/Button_Resume" index="0"]
margin_right = 204.0
margin_bottom = 51.0

[node name="LabelContainer" parent="MainPanel/Control/Button_Resume" index="1"]
margin_right = 204.0
margin_bottom = 51.0

[node name="Label" parent="MainPanel/Control/Button_Resume/LabelContainer" index="0"]
margin_right = 204.0
margin_bottom = 51.0
text = "Resume"

[node name="Button_Quit" parent="MainPanel/Control" instance=ExtResource( 2 )]
margin_left = 5.0
margin_top = 124.0
margin_right = 210.0
margin_bottom = 164.0

[node name="TextureButton" parent="MainPanel/Control/Button_Quit" index="0"]
margin_right = 205.0

[node name="LabelContainer" parent="MainPanel/Control/Button_Quit" index="1"]
margin_right = 205.0

[node name="Label" parent="MainPanel/Control/Button_Quit/LabelContainer" index="0"]
margin_right = 205.0
text = "Quit"

[node name="FreeFormControl" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="AudioSettingsPanel" parent="FreeFormControl" instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -296.0
margin_top = -84.5
margin_right = -74.0
margin_bottom = 84.5

[connection signal="button_pressed" from="MainPanel/Control/Button_Resume" to="." method="_on_Button_Resume_button_pressed"]
[connection signal="button_pressed" from="MainPanel/Control/Button_Quit" to="." method="_on_Button_Quit_button_pressed"]

[editable path="MainPanel/Control/Button_Resume"]
[editable path="MainPanel/Control/Button_Quit"]
